# Perceptrons

./: .gitignore  Cargo.toml  LICENSE  README.md
lib/: lib.rs  nn.rs  prelude.rs  tensors.rs  utils.rs
perceptrons_macros/: Cargo.toml
perceptrons_macros/src/: lib.rs
src/: lab.py  lib.rs  main.rs  optimizers.rs  prelude.rs  tensors.rs  utils.rs
