[package]
name = "perceptron"
version = "0.1.0"
edition = "2021"

[lib]
name = "perceptron"
path = "./lib/lib.rs"

[dependencies]
serde = { version = "1.0.148", features = ["derive"] }
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
rand = "0.8.5"
bincode = "1.3.3"
crossbeam-channel = "0.5.6"
